add roll no args syntax

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+TOKEN=NzA3MjUzNDM4NTM4NTc5OTk5.XrGHQg.b6Wbc3CblHl3UhEZghsz4-ovCzg
 PREFIX=!
 BUILD=0.1-dev
