Add channel filter

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 PREFIX=!
+ALLOWED_CHANNELS=rolling
 ALLOW_SHORTHAND=true
 DEBUG=false
-BUILD=0.0.2
+BUILD=0.0.3
