--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-discord-py = "==1.3.3"
+discord-py = "*"
 python-dotenv = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
