--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,14 @@
+version: "3"
+
 services:
   rollbot:
     build: .
     image: "hannilo/rollbot-py"
     container_name: rollbot
-
-version: "2"
+    restart: always
+    logging:
+      options:
+        max-file: 3
+        max-size: 10m
+    volumes:
+      - "./.env:/.env:ro"
